# tide

./: .gitignore  Makefile  README.md  default.nix  shell.nix  stack.yaml  tide.cabal  uiPlay.hs
grammar/: Lexer.x  Play.y
nix/: fetch-nixpkgs.nix  happy.nix
src/: Lex.hs  Lexer.hs  P.hs  Play.hs  PlayLex.hs
